# ManualRegistrationGL_V2

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  build.sh
scripts/: 99-spacemouse.rules   install_dependencies.sh
src/: OpenGL3DViewport.cpp  OpenGL3DViewport.hpp  SpaceMouseManager.cpp  SpaceMouseManager.hpp  main.cpp
src/qml/: MainWindow.qml  main.qml  qml.qrc
src/qml/components/: InputDeviceSelector.qml  ModeSelector.qml  SessionControls.qml  ShapeSelector.qml  TransformDisplay.qml  Viewport3D.qml
tests/: CMakeLists.txt  SpaceMouse_test.cpp  test_dependencies.cpp
